--- a/backend/apps/logus/templates/logus/create_booking.html
+++ b/backend/apps/logus/templates/logus/create_booking.html
@@ -38,15 +38,9 @@
             <div class="container">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="m-0"> Top Navigation <small>Example 3.0</small></h1>
+                        <h1 class="m-0"> Мастер бронирования</h1>
                     </div><!-- /.col -->
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Layout</a></li>
-                            <li class="breadcrumb-item active">Top Navigation</li>
-                        </ol>
-                    </div><!-- /.col -->
+
                 </div><!-- /.row -->
             </div><!-- /.container-fluid -->
         </div>
@@ -325,22 +319,6 @@
             console.log('Room ID:', roomId);
 
             // Example: Send the selected room ID to the server
-            $.ajax({
-                url: '{% url 'logus_registration:test' %}', // Update this to your actual endpoint
-                method: 'POST',
-                data: {
-                    'room_id': roomId,
-                    'csrfmiddlewaretoken': '{{ csrf_token }}' // Include CSRF token
-                },
-                success: function (response) {
-                    console.log('Room selected successfully:', response);
-                    // Optional: Handle success response
-                },
-                error: function (error) {
-                    console.error('Error selecting room:', error);
-                    // Optional: Handle error response
-                }
-            });
         });
 
         // Optionally, you can add some visual feedback for the selected row
