--- a/backend/apps/warehouse/templates/cheque/cheque_list.html
+++ b/backend/apps/warehouse/templates/cheque/cheque_list.html
@@ -54,9 +54,9 @@
                                     </div>
                                 </div>
                                 <br>
-                                <form action="{% url 'warehouse_v2:mainscreen' %}" method="post">
+                                <form action="{% url 'warehouse_v2:cheque-create' %}" method="post">
                                     {% csrf_token %}
-                                    <div class="col-md-1">
+                                    <div class="col-md-2">
                                         <button id="myButton" type="button" class="btn btn-block btn-success">
                                             + Добавить
                                         </button>
@@ -205,7 +205,7 @@
     <!-- Page specific script -->
     <script>
         document.getElementById('myButton').addEventListener('click', function () {
-            window.location.href = "{% url 'warehouse_v2:mainscreen' %}";
+            window.location.href = "{% url 'warehouse_v2:cheque-create' %}";
         });
     </script>
     <script>
